@@ -214,14 +214,20 @@ srcref <- function(srcfile, lloc) {
     structure(as.integer(lloc), srcfile=srcfile, class="srcref")
 }
 
-as.character.srcref <- function(x, useSource = TRUE, ...)
+as.character.srcref <- function(x, useSource = TRUE, to = x, ...)
 {
     srcfile <- attr(x, "srcfile")
+    if (!missing(to)) {
+        if (!identical(srcfile, attr(to, "srcfile")))
+    	    stop("'x' and 'to' must refer to same file")
+    	x[c(3L, 4L, 6L, 8L)] <- to[c(3L, 4L, 6L, 8L)]
+    }	
     if (!is.null(srcfile) && !inherits(srcfile, "srcfile")) {
        cat("forcing class on") ## debug
 	print(str(srcfile))
        class(srcfile) <- c("srcfilealias", "srcfile")
     }
+    
     if (useSource) {
     	if (inherits(srcfile, "srcfilecopy") || inherits(srcfile, "srcfilealias"))
     	    lines <- try(getSrcLines(srcfile, x[7L], x[8L]), TRUE)
